kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: perrinn-424-rt-streaming
  labels:
    name: perrinn-424-rt-streaming
