kubernetes/cassandra.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cassandra
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cassandra
  namespace: cassandra
spec:
  serviceName: cassandra
  replicas: 1
  selector:
    matchLabels:
      app: cassandra
  template:
    metadata:
      labels:
        app: cassandra
    spec:
      containers:
      - name: cassandra
        image: cassandra:4.1
        ports:
        - containerPort: 9042   # CQL
        - containerPort: 7000   # intra-node communication
        - containerPort: 7001   # TLS intra-node
        - containerPort: 7199   # JMX
        volumeMounts:
        - name: cassandra-data
          mountPath: /var/lib/cassandra
  volumeClaimTemplates:
  - metadata:
      name: cassandra-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 5Gi
      storageClassName: microk8s-hostpath
---
apiVersion: v1
kind: Service
metadata:
  name: cassandra
  namespace: cassandra
  labels:
    app: cassandra
spec:
  ports:
  - port: 9042
    name: cql
  clusterIP: None
  selector:
    app: cassandra
