kubernetes/kafka-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-monitoring-ui
  namespace: perrinn-424-rt-streaming
  labels:
    app: kafka-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-ui
  template:
    metadata:
      labels:
        app: kafka-ui
    spec:
      containers:
      - name: kafka-ui
        image: provectuslabs/kafka-ui:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui
  namespace: perrinn-424-rt-streaming
  labels:
    app: kafka-ui
spec:
  selector:
    app: kafka-ui
  ports:
    - port: 8082
      targetPort: 8080
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-ui-ingress
  namespace: perrinn-424-rt-streaming
spec:
  ingressClassName: nginx
  rules:
  - host: kafka-ui.local    # map this in /etc/hosts for local testing
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kafka-ui
            port:
              number: 8082
